# Legend

./: CMakeLists.txt  README.md
benchmarks/train_nonvme/: CMakeLists.txt  main.cu
benchmarks/train_nvme/: CMakeLists.txt  buffer.cu  buffer.h  main.cu  queue.cu  queue.h  settings.cu  settings.h
include/: nvm_admin.h  nvm_cmd.h  nvm_queue.h  nvm_types.h
src/: admin.c  dma.c  queue.c  util.h
